--- a/gallery2.html
+++ b/gallery2.html
@@ -75,6 +75,9 @@
                     <div class="gallery-item">
                         <img class="gallery-image" src="img/gallery5.jpg" alt="Photo">
                     </div>
+                    <div class="gallery-item">
+                        <img class="gallery-image" src="img/gallery.jpg" alt="Photo">
+                    </div>
 
                     <div class="gallery-item">
                         <img class="gallery-image" src="img/gallery4.jpg" alt="Photo">
@@ -94,6 +97,9 @@
                 <h1 class="headingimg">College Visit</h1>
                 <div class="gallery2">
 
+                    <div class="gallery-item">
+                        <img class="gallery-image" src="img/gallery5.jpg" alt="Photo">
+                    </div>
                     <div class="gallery-item">
                         <img class="gallery-image" src="img/gallery3.jpg" alt="Photo">
                     </div>
@@ -126,6 +132,9 @@
 
                     <div class="gallery-item">
                         <img class="gallery-image" src="img/gallery6.jpg" alt="photo">
+                    </div>
+                    <div class="gallery-item">
+                        <img class="gallery-image" src="img/gallery5.jpg" alt="Photo">
                     </div>
 
                 </div>
