--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
                         <img src="img/collaborator1.png" class="img-fluid border-radius p-4" alt="">
                     </div>
                     <div class="card-body">
-                        <h3 class="card-title">BTKU Dwarahat</h3>
+                        <h3 class="card-title">BTKIT Dwarahat</h3>
                         <p class="card-text-index">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint iure autem recusandae,
                             veniam, illo dolor soluta assumenda
