--- a/gallery2.html
+++ b/gallery2.html
@@ -72,85 +72,52 @@
             </nav>
         </div>
     </header>
+    <div class="slideshow-container">
 
-    
-    <div class="maingallerysection">
-        <div class="imgbody">
-            <div class="containerimg">
-
-                <h1 class="headingimg">Coding Competition</h1>
-                <div class="gallery2">
-
-                    <div class="gallery-item">
-                        <img class="gallery-image" src="img/gallery5.jpg" alt="Photo">
-                    </div>
-                    <div class="gallery-item">
-                        <img class="gallery-image" src="img/gallery.jpg" alt="Photo">
-                    </div>
-
-                    <div class="gallery-item">
-                        <img class="gallery-image" src="img/gallery4.jpg" alt="Photo">
-                    </div>
-
-                    <div class="gallery-item">
-                        <img class="gallery-image" src="img/gallery6.jpg" alt="Photo">
-                    </div>
-
-                </div>
-
-            </div>
+        <!-- Full-width images with number and caption text -->
+        <div class="mySlides fade">
+            <div class="numbertext">1 / 5</div>
+            <img src="img/gallery.jpg" style="width:100%">
+            <div class="text">Award Ceremony</div>
         </div>
-        <div class="imgbody">
-            <div class="containerimg">
 
-                <h1 class="headingimg">College Visit</h1>
-                <div class="gallery2">
-
-                    <div class="gallery-item">
-                        <img class="gallery-image" src="img/gallery5.jpg" alt="Photo">
-                    </div>
-                    <div class="gallery-item">
-                        <img class="gallery-image" src="img/gallery3.jpg" alt="Photo">
-                    </div>
-
-                    <div class="gallery-item">
-                        <img class="gallery-image" src="img/gallery2.jpg" alt="Photo">
-                    </div>
-
-                    <div class="gallery-item">
-                        <img class="gallery-image" src="img/gallery.jpg" alt="Photo">
-                    </div>
-
-                </div>
-
-            </div>
+        <div class="mySlides fade">
+            <div class="numbertext">2 / 5</div>
+            <img src="img/gallery2.jpg" style="width:100%">
+            <div class="text">Ideathon</div>
         </div>
-        <div class="imgbody">
-            <div class="containerimg">
 
-                <h1 class="headingimg">Coding Competition</h1>
-                <div class="gallery2">
-
-                    <div class="gallery-item">
-                        <img class="gallery-image" src="img/gallery5.jpg" alt="photo">
-                    </div>
-
-                    <div class="gallery-item">
-                        <img class="gallery-image" src="img/gallery4.jpg" alt="photo">
-                    </div>
-
-                    <div class="gallery-item">
-                        <img class="gallery-image" src="img/gallery6.jpg" alt="photo">
-                    </div>
-                    <div class="gallery-item">
-                        <img class="gallery-image" src="img/gallery5.jpg" alt="Photo">
-                    </div>
-
-                </div>
-
-            </div>
+        <div class="mySlides fade">
+            <div class="numbertext">3 / 5</div>
+            <img src="img/gallery3.jpg" style="width:100%">
+            <div class="text">Coding Competition</div>
         </div>
+        <div class="mySlides fade">
+            <div class="numbertext">4 / 5</div>
+            <img src="img/gallery4.jpg" style="width:100%">
+            <div class="text">Campus Visit</div>
+        </div>
+        <div class="mySlides fade">
+            <div class="numbertext">5 / 5</div>
+            <img src="img/gallery5.jpg" style="width:100%">
+            <div class="text">Hackathon</div>
+        </div>
+
+        <!-- Next and previous buttons -->
+        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+        <a class="next" onclick="plusSlides(1)">&#10095;</a>
     </div>
+    <br>
+
+    <!-- The dots/circles -->
+    <div style="text-align:center">
+        <span class="dot" onclick="currentSlide(1)"></span>
+        <span class="dot" onclick="currentSlide(2)"></span>
+        <span class="dot" onclick="currentSlide(3)"></span>
+        <span class="dot" onclick="currentSlide(4)"></span>
+        <span class="dot" onclick="currentSlide(5)"></span>
+    </div>
+
     <footer class="footer-section">
         <div class="container">
             <div class="footer-content pt-5 pb-4">
@@ -166,11 +133,15 @@
                             </div>
                             <div class="footer-social-icon">
                                 <span>Follow us</span>
-                                <a href="https://www.facebook.com/people/GoHackathon/100088250115623/"><i class="fab fa-facebook-f facebook-bg"></i></a>
-                                <a href="https://www.instagram.com/gohackathon/?igshid=YmMyMTA2M2Y%3D"><i class="fab fa-instagram instagram-bg"></i></a>
+                                <a href="https://www.facebook.com/people/GoHackathon/100088250115623/"><i
+                                        class="fab fa-facebook-f facebook-bg"></i></a>
+                                <a href="https://www.instagram.com/gohackathon/?igshid=YmMyMTA2M2Y%3D"><i
+                                        class="fab fa-instagram instagram-bg"></i></a>
                                 <a href="https://twitter.com/GoHackathon"><i class="fab fa-twitter twitter-bg"></i></a>
-                                <a href="https://www.linkedin.com/in/go-hackathon-a082b9264/"><i class="fab fa-linkedin-in linkedin-bg"></i></a>
-                                <a href="https://www.youtube.com/@gohackathon/videos"><i class="fab fa-youtube youtube-bg"></i></a>
+                                <a href="https://www.linkedin.com/in/go-hackathon-a082b9264/"><i
+                                        class="fab fa-linkedin-in linkedin-bg"></i></a>
+                                <a href="https://www.youtube.com/@gohackathon/videos"><i
+                                        class="fab fa-youtube youtube-bg"></i></a>
                             </div>
                         </div>
                     </div>
@@ -195,27 +166,32 @@
                         <div class="footer-widget-phone">
                             <div class="footer-widget">
                                 <div class="address details">
-                                  <div class="footer-widget-heading">
-                                    <h3>Contact Us</h3>
-                                  </div>
+                                    <div class="footer-widget-heading">
+                                        <h3>Contact Us</h3>
+                                    </div>
                                     <div class="topic">
-                                            <i class="fa fa-map-marker"></i>
-                                        &nbsp;&nbsp;&nbsp;&nbsp;<strong>AAG–11, Shipra Krishna Azure, Kaushambi, Ghaziabad, U.P 201010</strong>
+                                        <i class="fa fa-map-marker"></i>
+                                        &nbsp;&nbsp;&nbsp;&nbsp;<strong>AAG–11, Shipra Krishna Azure, Kaushambi,
+                                            Ghaziabad, U.P 201010</strong>
                                     </div>
                                 </div> <br>
                                 <div class="phone-details">
-                                    <div class="topic"> 
+                                    <div class="topic">
                                         <!-- <i class="fa fa-phone"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Phone -->
                                         <!-- <i class="fa fa-phone" style="font-size:20px"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong><a href="tel:+91 9910018925">+91 9910018925</a></strong> <br> -->
-                                        <i class="fa fa-phone" style="font-size:20px"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong><a href="tel:+91 7678476713">+91 7678476713</a></strong> <br>
-                                        <i class="fa fa-phone" style="font-size:20px"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <strong><a href="tel:+91-120-4567841">+91-120-4567841</a></strong>
+                                        <i class="fa fa-phone"
+                                            style="font-size:20px"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong><a
+                                                href="tel:+91 7678476713">+91 7678476713</a></strong> <br>
+                                        <i class="fa fa-phone" style="font-size:20px"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                        <strong><a href="tel:+91-120-4567841">+91-120-4567841</a></strong>
                                     </div>
                                 </div> <br>
                                 <div class="email-details">
                                     <div class="topic">
-                                        <i class="fas fa-envelope"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong><a href="mailto:info@gohackathon.in">info@gohackathon.in</a></strong>
+                                        <i class="fas fa-envelope"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong><a
+                                                href="mailto:info@gohackathon.in">info@gohackathon.in</a></strong>
                                         <!-- <i class="fas fa-envelope"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong><a href="mailto:gohackathon2k22@gmail.com">gohackathon2k22@gmail.com</a></strong> -->
-                                    </div>   
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -262,6 +238,22 @@
             </div>
         </div>
     </footer>
+    <script>
+        let slideIndex = 0;
+        showSlides();
+
+        function showSlides() {
+            let i;
+            let slides = document.getElementsByClassName("mySlides");
+            for (i = 0; i < slides.length; i++) {
+                slides[i].style.display = "none";
+            }
+            slideIndex++;
+            if (slideIndex > slides.length) { slideIndex = 1 }
+            slides[slideIndex - 1].style.display = "block";
+            setTimeout(showSlides, 2000); // Change image every 2 seconds
+        }
+    </script>
 </body>
 
 </html>
