Past event page

--- a/index.html
+++ b/index.html
@@ -120,9 +120,9 @@
         <div class="cover">
             <div class="content text-center">
                 <h1>Some Features That Made Us Unique</h1>
-                <p>
+                <!-- <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae, eum?
-                </p>
+                </p> -->
             </div>
         </div>
         <section class="articles">
@@ -204,9 +204,9 @@
         </section>
         <div class="purchase text-center">
             <h1>Courses, Practice Sets, Quizzes</h1>
-            <p>
+            <!-- <p>
                 Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-            </p>
+            </p> -->
         </div>
         <section class="articles">
             <article>
@@ -298,7 +298,7 @@
                         <img src="img/collaborator1.png" class="img-fluid border-radius p-4" alt="">
                     </div>
                     <div class="card-body">
-                        <h3 class="card-title">BTKIT Dwarahat</h3>
+                        <h3 class="card-title">BTKU Dwarahat</h3>
                         <p class="card-text-index">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint iure autem recusandae,
                             veniam, illo dolor soluta assumenda
