--- a/past-event.html
+++ b/past-event.html
@@ -9,8 +9,14 @@
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
         integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-    <link rel="stylesheet" href="./eventstyle.css" />
-    <link rel="stylesheet" href="./mobile-style.css">
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="mobile-style.css">
+    <!-- <link rel="stylesheet" href="contact.html"> -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;700;900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="eventstyle.css">
 </head>
 <body class="eventbody">
     <header>
@@ -21,11 +27,11 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <div class="mr-auto"></div>
                     <ul class="navbar-nav">
-                        <li class="nav-item active">
+                        <!-- <li class="nav-item active">
                             <a class="nav-link" href="#">HOME
                                 <span class="sr-only">(current)</span>
                             </a>
-                        </li>
+                        </li> -->
                         <li class="nav-item">
                             <a class="nav-link active" href="about.html">ABOUT US</a>
                         </li>
@@ -64,66 +70,33 @@
             </nav>
         </div>
     </header>
-    <div class="main">
-      <div class="event2bar">
 
-  <!--**** header area start **** -->
-  <header class="header_area" id="header">
-    <div class="container-fluid h-100">
-      <div class="row h-100">
-        <div class="col-12 h-100">
-          <nav class="h-100 navbar navbar-expand-lg">
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#wbnav" aria-controls="wbnav" aria-expanded="false" aria-label="Toggle navigation"><span class="fa fa-bars"></span></button>
 
-            <!-- nav menu -->
-
-            <div class="collapse navbar-collapse" id="wbnav">
-                <ul class="navbar-nav mr-auto" id="wbnav">
-                    <li class="nav-itemsub">
-                        <button type="button" class="btn btn-primary"><a href="event.html" class="nav-link">Live Events</a></button> 
-                    </li>
-                    <li class="nav-itemsub">
-                        <button type="button" class="btn btn-primary"><a href="upcoming.html" class="nav-link">Up coming Events</a></button> 
-                    </li>
-                    <li class="nav-itemsub">
-                        <button type="button" class="btn btn-primary"><a href="past.html" class="nav-link">Past Events</a></button> 
-                    </li>
-                
-                  </ul>
-
+    <div class="container">
+        <div class="past-event">
+            <div>
+                <h6><strong>Event Name:- </strong>SAMADHAN</h6>
+                <h6><strong>Event Mascot:- <img src="img/samadhan.png" alt=""></strong></h6>
+                <h6><strong>Event Date:- </strong>17th and 18th December 2022</h6>
+                <h6><strong>Event Duration:- </strong>24hrs (Split over 2 Days)</h6>
+                <h6><strong>Event Venue:- </strong>BTKIT Dwarahat (https://goo.gl/maps/1UNyqo5NwR8kTsTVA)</h6>
+            </div> <br>
+            <div class="past-event-text">
+                <p>The event will be hosted at BTKIT Campus situated in the beautiful hills of Ranikhet belt near Dwarahat. 
+                    Dwarahat is historically rich in culture, spiritual, and commercial activities in the Almora region 
+                    and now is one of the rapidly growing educational hubs of Uttarakhand.</p>
             </div>
-          </nav>
+            <div>
+                <h6><strong>Event Uniqueness:-</strong></h6>
+                <p>This event brings real industry problem statements to different teams from across the country, the teams are given specific problem statements for which they develop solutions. Professional industry mentors evaluate the level and choose the winning team. The winning team gets the prize money.
+                    The story does not end here, it goes beyond that, here most of the hackathons end up with the winning team, and in this event, the opportunity is for everybody who participates in it.
+                    All the Participating teams who developed their solutions (both winning and losing one’s) will be now assigned to industry mentors for specific periods. The teams will focus on developing the solution under the mentorship of the expert. The team who will produce the best results in the desired timeframe will be selected for a paid internship for 6 months (or for a specific duration of the project development)
+                    On successful completion of the project, the team will have options either to continue paid internship with a new project or get a job opportunity (if they have completed their studies by that time.)
+                    Go hackathon aims at providing continuous help and support to all the participants of their events and developing a life-long bond of learning, earning, and contributing back. The aim is to impact industry and society by providing continuous innovative solutions to real problems faced by the industry.</p>
+            </div>
         </div>
-      </div>
     </div>
-  </header>
-      </div>
 
-      <div class="container">
-        <h2>Event Name:- Samadhan</h2>
-        <figure class="figure">
-            <img src="/img/samadhan.png" class="figure-img img-fluid rounded" alt="...">
-            <figcaption class="figure-caption text-end" style="color:black"><H5>
-                Event Date- 17th and 18th December 2022
-                <br>
-                Event Duration- 24hrs (Split over 2 Days)
-                <br>
-                Event Venue- BTKIT Dwarahat (https://goo.gl/maps/1UNyqo5NwR8kTsTVA)
-                <br>
-                The event will be hosted at BTKIT Campus situated in the beautiful hills of Ranikhet belt near Dwarahat. Dwarahat is historically rich in culture, spiritual, and commercial activities in the Almora region and now is one of the rapidly growing educational hubs of Uttarakhand.</figcaption>
-          </H5> 
-        <br> <br>
-        <h5>
-            Event Uniqueness-
-
-This event brings real industry problem statements to different teams from across the country, the teams are given specific problem statements for which they develop solutions. Professional industry mentors evaluate the level and choose the winning team. The winning team gets the prize money.
-<br> The story does not end here, it goes beyond that, here most of the hackathons end up with the winning team, and in this event, the opportunity is for everybody who participates in it.
-<br> All the Participating teams who developed their solutions (both winning and losing one’s) will be now assigned to industry mentors for specific periods. The teams will focus on developing the solution under the mentorship of the expert. The team who will produce the best results in the desired timeframe will be selected for a paid internship for 6 months (or for a specific duration of the project development)
-<br> On successful completion of the project, the team will have options either to continue paid internship with a new project or get a job opportunity (if they have completed their studies by that time.)
-<br> Go hackathon aims at providing continuous help and support to all the participants of their events and developing a life-long bond of learning, earning, and contributing back. The aim is to impact industry and society by providing continuous innovative solutions to real problems faced by the industry.
-        </h5></figure> 
-
-      </div>
       <footer class="footer-section">
         <div class="container">
             <div class="footer-content pt-5 pb-4">
