--- a/gallery2.html
+++ b/gallery2.html
@@ -35,7 +35,7 @@
                             <a class="nav-link active" href="index.html">HOME</a>
                         </li> -->
                         <li class="nav-item">
-                            <a class="nav-link active" href="about.html">ABOUT US</a>
+                            <a class="nav-link" href="about.html">ABOUT US</a>
                         </li>
                         <li class="nav-item dropdown">
                             <div class="dropdown">
