--- a/index.html
+++ b/index.html
@@ -10,67 +10,68 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
         integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="mobile-style.css">
+    <!-- <link rel="stylesheet" href="mobile-style.css"> -->
     <!-- <link rel="stylesheet" href="contact.html"> -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;700;900&display=swap"
         rel="stylesheet">
 </head>
-<body id="body">
-    <header>
-        <div class="container-fluid p-0">
-            <nav class="navbar navbar-expand-lg">
-                <a class="navbar-brand" href="index.html">
-                    <img class="logoimg" src="img/logowithoutbg.png" alt=""></a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <i class="fas fa-align-right text-dark"></i>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <div class="mr-auto"></div>
-                    <ul class="navbar-nav">
-                        <!-- <li class="nav-item active">
-                            <a class="nav-link active" href="index.html">HOME</a>
-                        </li> -->
-                        <li class="nav-item">
-                            <a class="nav-link active" href="about.html">ABOUT US</a>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <div class="dropdown">
-                                <a href="event.html" class="nav-link">EVENTS</a>
-                                <div class="dropdown-content">
-                                    <a href="#">LIVE EVENTS</a>
-                                    <a href="#">UPCOMMING EVENTS</a>
-                                    <a href="#">PAST EVENTS</a>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <div class="dropdown">
-                                <a href="#" class="nav-link">HACKATHON</a>
-                                <div class="dropdown-content">
-                                    <a href="leaderboard.html">LEADERBOARD</a>
-                                    <a href="#">PRACTICE SET</a>
-                                    <a href="#">PARTICIPANTS</a>
-                                    <a href="#">WINNERS</a>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="gallery2.html">GALLERY</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="contact.html">CONTACT US</a>
-                        </li>
-                        <li>
-                            <button class="btn btn-primary px-5 py-2 primary-btn" id="login-btn">Login/Signup</button>
-                        </li>
-                    </ul>
+
+<nav class="navbar navbar-expand-lg">
+    <a class="navbar-brand" href="index.html">
+        <img class="logoimg" src="img/logowithoutbg.png" alt=""></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <i class="fas fa-align-right text-dark"></i>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+        <div class="mr-auto"></div>
+        <ul class="navbar-nav">
+            <li class="nav-item active">
+                <!-- <a class="nav-link" href="#">HOME
+                    <span class="sr-only">(current)</span>
+                </a> -->
+            </li>
+            <li class="nav-item">
+                <a class="nav-link active" href="about.html">ABOUT US</a>
+            </li>
+            <li class="nav-item dropdown">
+                <div class="dropdown">
+                    <a href="event.html" class="nav-link">EVENTS</a>
+                    <div class="dropdown-content">
+                        <a href="#">LIVE EVENTS</a>
+                        <a href="#">UPCOMMING EVENTS</a>
+                        <a href="#">PAST EVENTS</a>
+                    </div>
                 </div>
-            </nav>
-        </div>
-    </header>
+            </li>
+            <li class="nav-item dropdown">
+                <div class="dropdown">
+                    <a href="#" class="nav-link">HACKATHON</a>
+                    <div class="dropdown-content">
+                        <a href="leaderboard.html">LEADERBOARD</a>
+                        <a href="#">PRACTICE SET</a>
+                        <a href="#">PARTICIPANTS</a>
+                        <a href="#">WINNERS</a>
+                    </div>
+                </div>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="gallery.html">GALLERY</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="contact.html">CONTACT US</a>
+            </li>
+            <li>
+                <button class="btn btn-primary px-5 py-2 primary-btn" id="login-btn">Login/Signup</button>
+            </li>
+        </ul>
+    </div>
+</nav>
+
+<body id="body">
+    
     <section class="section-0">
         <div class="container">
             <div class="row">
