--- a/event.html
+++ b/event.html
@@ -76,16 +76,15 @@
     <div class="event2bar">
 
     <img src="img/eve.png" alt="" width="100%" height="400px" style="position: relative; text-align: center; ">
-      <h2 style=" position: absolute;
-      top: 40%;
-      left: 50%;
+    <h2 style=" position: absolute;
+       top: 40%;
+       left: 50%;
       transform: translate(-50%, -50%) ; color: white;;
     ">EVENTS</h2> <br> 
     <h4 style=" position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);  color: white;
-">It always seems impossible until its done</h4>
+       top: 50%;
+       left: 50%;
+  transform: translate(-50%, -50%);  color: white;">It always seems impossible until its done</h4>
 
       <div class="container">
         <div class="card-container">
@@ -98,7 +97,7 @@
                   <p class="card-text">It’s a wonderful opportunity to showcase your fresh innovative ideas coupled with
                     your entrepreneurial skills</p>
                 </div>
-                <a href="payment.html"><button class="btn btn-primary">Register Now</button ></a> 
+                <a href="#"><button class="btn btn-primary">Register Now</button ></a> 
               </div>
 
               <div class="card">
