--- a/login.html
+++ b/login.html
@@ -7,7 +7,7 @@
       src="https://kit.fontawesome.com/64d58efce2.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="login.css" />
+    <link rel="stylesheet" href="css/login.css" />
     <title>GoHackathon</title>
   </head>
   <body>
@@ -152,6 +152,6 @@
       </div>
     </div>
 
-    <script src="login.js"></script>
+    <script src="js/login.js"></script>
   </body>
 </html>
