--- a/event.html
+++ b/event.html
@@ -10,8 +10,8 @@
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
     integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-  <link rel="stylesheet" href="eventstyle.css">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/eventstyle.css">
+  <link rel="stylesheet" href="css/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;700;900&display=swap"
@@ -133,6 +133,9 @@
           </div>
         </div>
       </div>
+</body>
+
+
       <footer class="footer-section">
         <div class="container">
           <div class="footer-content pt-5 pb-4">
@@ -140,7 +143,7 @@
               <div class="col-xl-3 col-lg-3 footer-about">
                 <div class="footer-widget">
                   <div class="footer-logo">
-                    <a href="index.html"><img src="logo.jpg" class="img-fluid" alt="logo"></a>
+                    <a href="index.html"><img src="img/footer_logo.jpg" class="img-fluid" alt="logo"></a>
                   </div>
                   <div class="footer-text">
                     <p>Go Hackathon comprises eminent Industry professionals, educators, and students meant
@@ -255,10 +258,9 @@
       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
-      <script src="./main.js"></script>
+      <script src="js/main.js"></script>
       <script>
 
       </script>
-</body>
 
 </html>
