--- a/leaderboard.html
+++ b/leaderboard.html
@@ -11,8 +11,8 @@
             
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
           integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-      <link rel="stylesheet" href="leaderboard.css">
-      <link rel="stylesheet" href="style.css">
+      <link rel="stylesheet" href="css/leaderboard.css">
+      <link rel="stylesheet" href="css/style.css">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
       <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -217,7 +217,9 @@
             </table>
         </div>
     </div>
-   
+</body>
+
+
     <footer class="footer-section">
         <div class="container">
             <div class="footer-content pt-5 pb-4">
@@ -225,7 +227,7 @@
                     <div class="col-xl-3 col-lg-3 footer-about">
                         <div class="footer-widget">
                             <div class="footer-logo">
-                                <a href="index.html"><img src="logo.jpg" class="img-fluid" alt="logo"></a>
+                                <a href="index.html"><img src="img/footer_logo.jpg" class="img-fluid" alt="logo"></a>
                             </div>
                             <div class="footer-text">
                                 <p>Go Hackathon comprises eminent Industry professionals, educators, and students meant
@@ -329,7 +331,7 @@
             </div>
         </div>
     </footer>
-</body>
+
 <script>
     function search(){
         var text = document.getElementById('search').value;
