--- a/past-event.html
+++ b/past-event.html
@@ -9,14 +9,14 @@
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
         integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="mobile-style.css">
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/mobile-style.css">
     <!-- <link rel="stylesheet" href="contact.html"> -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;700;900&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="eventstyle.css">
+    <link rel="stylesheet" href="css/eventstyle.css">
 </head>
 
 <nav class="navbar navbar-expand-lg">
@@ -91,6 +91,7 @@
             </div>
         </div>
     </div>
+</body>
 
       <footer class="footer-section">
         <div class="container">
@@ -99,7 +100,7 @@
                     <div class="col-xl-3 col-lg-3 footer-about">
                         <div class="footer-widget">
                             <div class="footer-logo">
-                                <a href="index.html"><img src="logo.jpg" class="img-fluid" alt="logo"></a>
+                                <a href="index.html"><img src="img/footer_logo.jpg" class="img-fluid" alt="logo"></a>
                             </div>
                             <div class="footer-text">
                                 <p>Go Hackathon comprises eminent Industry professionals, educators, and students meant
@@ -203,6 +204,7 @@
             </div>
         </div>
     </footer>
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
     integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
@@ -210,10 +212,10 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
     crossorigin="anonymous"></script>
-<script src="./main.js"></script>
+<script src="js/main.js"></script>
 <script>
   
 </script>
-</body>
+
 
 </html>
