--- a/index.html
+++ b/index.html
@@ -96,16 +96,16 @@
         </div>
         <div class="images">
             <div class="img1">
-                <img class="simg" src="sponsorsimg/SSIM-LOGO-1.png" alt="ssim">
+                <img class="simg" src="img/sponsorsimg/SSIM-LOGO-1.png" alt="ssim">
             </div>
             <div class="img2">
-                <img class="simg" src="sponsorsimg/tp-agri-logo.png" alt="agritech">
+                <img class="simg" src="img/sponsorsimg/tp-agri-logo.png" alt="agritech">
             </div>
             <div class="img3">
-                <img class="simg" src="sponsorsimg/Skyfield-Agritech.png" alt="Skyfield-Agritech">
+                <img class="simg" src="img/sponsorsimg/Skyfield-Agritech.png" alt="Skyfield-Agritech">
             </div>
             <div class="img4">
-                <img class="simg" src="sponsorsimg/MOLogo.png" alt="Mangosorange">
+                <img class="simg" src="img/sponsorsimg/MOLogo.png" alt="Mangosorange">
             </div>
         </div>
     </section>
