--- a/dashboard.html
+++ b/dashboard.html
@@ -19,7 +19,7 @@
 
 <nav class="navbar navbar-expand-lg">
     <a class="navbar-brand" href="index.html">
-        <img class="logoimg" src="img/logowithoutbg.png" alt=""></a>
+        <img class="logoimg" src="img/main_logo.png" alt=""></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <i class="fas fa-align-right text-dark"></i>
