--- a/login.html
+++ b/login.html
@@ -15,7 +15,7 @@
       <div class="forms-container">
         <div class="signin-signup">
           <form class="sign-in-form" action="index.html">
-            <img src="img\logowithoutbg.png" class="image" alt="" />
+            <img src="img/main_logo.png" class="image" alt="" />
             <br>
             <h2 class="title">SIGN IN</h2>
             <div class="input-field">
@@ -41,7 +41,7 @@
             </div>
           </form>
           <form  class="sign-up-form" action="index.html">
-            <img src="img\logowithoutbg.png" class="image" alt="" />   
+            <img src="img/main_logo.png" class="image" alt="" />   
             <br>         
             <h2 class="title">SIGN UP</h2>
             <div class="input-field">
