--- a/index.html
+++ b/index.html
@@ -114,9 +114,9 @@
         <div class="cover">
             <div class="content text-center">
                 <h1>Some Features That Made Us Unique</h1>
-                <!-- <p>
+                <p class="text-secondary">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae, eum?
-                </p> -->
+                </p>
             </div>
         </div>
         <section class="articles">
@@ -198,9 +198,9 @@
         </section>
         <div class="purchase text-center">
             <h1>Courses, Practice Sets, Quizzes</h1>
-            <!-- <p>
+            <p class="text-secondary">
                 Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-            </p> -->
+            </p>
         </div>
         <section class="articles">
             <article>
