--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <a href="#" class="nav-link">HACKATHON</a>
                     <div class="dropdown-content">
                         <a href="leaderboard.html">LEADERBOARD</a>
-                        <a href="#">PRACTICE SET</a>
+                        <a href="practiceset.html">PRACTICE SET</a>
                         <a href="#">PARTICIPANTS</a>
                         <a href="#">WINNERS</a>
                     </div>
