--- a/gallery.html
+++ b/gallery.html
@@ -63,6 +63,9 @@
             <li class="nav-item">
                 <a class="nav-link" href="contact.html">CONTACT US</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="training.html">TRAINING</a>
+            </li>
             <li>
                 <button class="btn btn-primary px-5 py-2 primary-btn" id="login-btn">Login/Signup</button>
             </li>
